HTML y CSS de filtrado: añadido

--- a/style2.css
+++ b/style2.css
@@ -11,48 +11,68 @@
 
 }
 
-header{
-    display: flex;
-    background-color:plum;
-    align-items: center;
+
+
+#banner{
     width: 100%;
-    padding: 20px 50px;
-    color: white;
 }
 
-header nav{
-    background-color: purple;
-    display: flex;
-    margin-left: 30px;
-    justify-content: center;
-    margin-left: auto;
-    padding: 20px 40px;
-
+.container{
+    display:flex;
+    width: 80%;
+    max-width: 1200px;
 }
 
-
-header nav li{
-    margin: 0 13px;
-    justify-content: center;
-    margin-left: auto;
-    color: white;
-    background-color: plum;
-    font-size: medium;
-    font-family: 'Times New Roman', Times, serif;
+.column{
+    width: 100%;
 
 }
 
-.globalList{
+
+.notes-form{
     background-color: pink;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 50px;
+    font-size: 10px;
     margin-top: 5%;
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
-    display: flex;
+   
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
     
 }
+
+
+
+input[type="button-add"]{
+    width: 88px;
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 20px;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+
+input[type="text"]{
+    width: 180px;
+    height: 40px;
+    border: none;
+    background-color: white;
+    color: black;
+    padding: 5px;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+
+p{
+    font-size: xx-large;
+}
+
+
+
+
