--- a/style.css
+++ b/style.css
@@ -1,122 +1,39 @@
 *{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    list-style: none;
-    font-family: helvetica;
-    background-color: plum;
-
+    margin: 0rem;
+    padding: 0rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
-    display: flex;
-    background-color:plum;
-    align-items: center;
-    width: 100%;
-    padding: 20px 50px;
+body{
+    background-color: pink;
+    background-image: url("./retro-computer-desk-arrangement.jpg");
+    
+}
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3.5rem;
+    padding: 3rem 0;
     color: white;
-}
-
-header nav{
-    background-color: purple;
-    display: flex;
-    margin-left: 30px;
-    justify-content: center;
-    margin-left: auto;
-    padding: 20px 40px;
-
-}
+    text-align: center;
 
 
-header nav li{
-    margin: 0 13px;
-    justify-content: center;
-    margin-left: auto;
-    color: white;
-    background-color: plum;
-    font-size: medium;
-    font-family: 'Times New Roman', Times, serif;
-
-}
-
-#banner{
-    width: 100%;
 }
 
 .container{
-    display:flex;
-    width: 80%;
-    max-width: 1200px;
+    background-color: palevioletred;
+    max-width: 75rem;
+    margin: 0rem auto;
+    display: block;
 }
 
-.column{
-    width: 100%;
-
+.result{
+    background-color: violet;
+    font-size: 1.5rem;
 }
 
+.u-full-width{
+    display: block;
+   width: 8rem;
+   margin: 0rem auto;
 
-.notes-form{
-    background-color: pink;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 10px;
-    margin-top: 5%;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-   
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    
 }
-
-
-
-input[type="button-add"]{
-    width: 88px;
-    border: none;
-    background-color: black;
-    color: white;
-    padding: 20px;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-
-
-
-input[type="button-clear"]{
-    width: 88px;
-    border: none;
-    background-color: black;
-    color: white;
-    padding: 20px;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-
-input[type="text"]{
-    width: 180px;
-    height: 40px;
-    border: none;
-    background-color: white;
-    color: black;
-    padding: 5px;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-
-
-p{
-    font-size: xx-large;
-}
-
-.filtrar {
-    width: 100px;
-    color: black;
-    height: 50px;
-    background-color: yellow;
-}
-
-
-
